# upperlimitstools_fitting

./: .gitignore  README.md  pyproject.toml
src/tau_upperlimitstools_fitting/: functions_fit.py  utility.py
tests/: Example_UL_1D.ipynb  Example_fit1D.ipynb  Example_fit1D_fuctions.ipynb  Example_fit2D.ipynb  example_UL_2D_toys.py  results.txt  results_2D_toys.txt  workspace_model_sb.root  workspace_model_sb_2D.root  workspace_model_sb_gaussExp.root
