[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "tau_upperlimitstools_fitting"
version = "0.0.1"
authors = [
  { name="Marcela Garcia", email="marciah@post.kek.jp" },
]
description = "A small package for UL and fitting within the tau group at Belle II"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://gitlab.desy.de/belle2/physics/tau/tau_upperlimitstools_fitting"
